<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.invenium.thebig6ix.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.invenium.thebig6ix.ui.predictions.PredictionFragment"
        android:label="@string/Predictions"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.invenium.thebig6ix.ui.profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.invenium.thebig6ix.ui.login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_navigation_login_to_createAccountFragment"
            app:destination="@id/createAccountFragment" />
        <action
            android:id="@+id/action_navigation_login_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/createAccountFragment"
        android:name="com.invenium.thebig6ix.ui.createaccount.CreateAccountFragment"
        android:label="CreateAccountFragment" />
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.invenium.thebig6ix.ui.forgotpassword.ForgotPasswordFragment"
        android:label="ForgotPasswordFragment" />
</navigation>