<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/coldGrey7">

    <!-- Circular space for logo -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_tbsix" />

    <!-- Email field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Vertical padding -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@id/textInputLayoutEmail" />

    <!-- Password field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutEmail"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Vertical padding -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@id/textInputLayoutPassword" />

    <!-- Login button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutPassword"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/enter"
        android:backgroundTint="@color/google_blue"
        android:textColor="@color/white"/>

    <!-- Vertical padding -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@id/buttonLogin" />

    <!-- Create account link -->
    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/createaccount"
        android:textColor="@color/google_blue"
        android:textSize="16sp" />

    <!-- Vertical padding -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@id/textViewCreateAccount" />

    <!-- Forgot password link -->
    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_alignEnd="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:onClick="onForgotPasswordClick"
        android:text="@string/forgotpassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:focusable="true" />

    <!-- Vertical padding -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@id/textViewForgotPassword" />

    <!-- Sign in with Google button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewForgotPassword"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/gmailLogin"
        android:textColor="@color/white"
        android:backgroundTint="@color/google_red" />

</RelativeLayout>